<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_storage"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">


        <RadioButton
            android:id="@+id/rb_64gb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="true"
            android:text="@string/_64_gb"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_128gb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/_128_gb"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_256gb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/_256_gb"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_color"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner_color"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:entries="@array/colors"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Submit"
        android:layout_margin="20dp"
        android:textSize="30sp" />


</LinearLayout>